Improved logout handler